--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -13,9 +13,9 @@ Allison Randal <al@shadowed.net>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 21 Mar 2003
-  Last Modified: 15 Mar 2007
+  Last Modified: 28 Mar 2007
   Number: 6
-  Version: 81
+  Version: 82
 
 
 This document summarizes Apocalypse 6, which covers subroutines and the
@@ -165,6 +165,14 @@ It also behaves like a block with respect to control exceptions.  If you
 C<return> from within a pointy block, it will return from the innermost
 enclosing C<sub> or C<method>, not the block itself.  It is referenced
 by C<&?BLOCK>, not C<&?ROUTINE>.
+
+A normal pointy block's parameters default to C<readonly>, just like
+parameters to a normal sub declaration.  However, the double-pointy variant
+defaults parameters to C<rw>:
+
+    for @list <-> $elem {
+        $elem++;
+    }
 
 =head2 Stub declarations
 
