typo spotted by Ruud++
git-svn-id: http://svn.pugscode.org/pugs@23814 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S09.pod
+++ b/doc/trunk/design/syn/S09.pod
@@ -194,7 +194,7 @@ operator, so you can't use the "dotted" form either:
     my @values.[10];          # Error
     my @keys\ .[10];          # Error
 
-Attempting to access an index outside a array's defined range will fail:
+Attempting to access an index outside an array's defined range will fail:
 
     @dwarves[7] = 'Sneaky';   # Fails with "invalid index" exception
 
